--- a/AP.Mvc/Views/Auth/Login.cshtml
+++ b/AP.Mvc/Views/Auth/Login.cshtml
@@ -224,8 +224,14 @@
         </div>
     </div>
 
+    <!-- Scripts: ORDEN CORRECTO -->
+    <!-- 1. jQuery PRIMERO -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- 2. Bootstrap después -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- 3. jQuery Validate después de jQuery -->
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.17.0/jquery.validate.min.js"></script>
+    <!-- 4. jQuery Unobtrusive al final -->
     <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
 </body>
 </html>
